# mc-learning-lab

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: gl.h  glad.h
src/: glad.c  main.cpp  stb_image.cpp
src/block/: blockBase.cpp  blockBase.h  blockRegister.cpp  blockRegister.h  blocks.h
src/config/: gameConstant.h
src/core/: application.cpp  application.h  collision.cpp  collision.h  eventSystem.cpp  eventSystem.h  input.cpp  input.h  sceneManager.cpp  sceneManager.h  time.cpp  time.h  timeSystem.cpp  timeSystem.h  window.cpp  window.h
src/gui/: button.cpp  button.h  canvas.cpp  canvas.h  eventSystem.cpp  eventSystem.h  quad.cpp  quad.h  rectTransform.cpp  rectTransform.h  text.cpp  text.h  uiElement.cpp  uiElement.h  uiSystem.cpp  uiSystem.h
src/item/: item.cpp  item.h  itemBase.cpp  itemBase.h  itemRegister.cpp  itemRegister.h  items.h
src/item/model/: generatedModel.cpp  generatedModel.h  itemModelBase.h
src/player/: hotBar.cpp  hotBar.h  movement.cpp  movement.h  player.cpp  player.h  rayCaster.cpp  rayCaster.h
src/render/: camera.cpp  camera.h  outlineRenderer.cpp  outlineRenderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skyboxRenderer.cpp  skyboxRenderer.h  textRenderer.cpp  texture.cpp  texture.h  uiRenderer.cpp  uiRenderer.h  worldRenderer.cpp  worldRenderer.h
src/resource/: model.h  resourceManager.cpp  resourceManager.h  texture.cpp  texture.h
src/util/: jsonReader.cpp  jsonReader.h
src/world/: block.cpp  block.h  chunk.cpp  chunk.h  world.cpp  world.h  worldGenerator.cpp  worldGenerator.h
